# stoq

./: ARCHITECTURE_BOUNDARY.md  A_PLUS_PLUS_EXCELLENCE_CRITERIA.md  COMPETITIVE_POSITIONING_ANALYSIS.md  Cargo.toml  Dockerfile  EBPF_IMPLEMENTATION.md  EBPF_STATUS.md  EXECUTIVE_DECISION_BRIEF.md  IMPLEMENTATION_PRIORITY_MATRIX.md  MARKET_OPPORTUNITY_ANALYSIS.md  MONITORING.md  PHASE3_ADAPTIVE_IMPLEMENTATION.md  PHASE5_QUALITY_VALIDATION_FINAL.md  PHASE5_TESTING_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_DEPENDENCY_ANALYSIS.md  PHASE_2_COMPLETION_REPORT.md  PHOENIX_PERFORMANCE_REPORT.md  README.md  STOQ_100_PERCENT_COMPLETION_REPORT.md  STOQ_ARCHITECTURE_ANALYSIS.md  STOQ_COMPLETION_ROADMAP.md  STOQ_PERFORMANCE_ANALYSIS.md  STOQ_SECURITY_AUDIT_REPORT.md  STOQ_STRATEGIC_ANALYSIS.md  STOQ_TESTING_REPORT.md  STRATEGIC_ROADMAP_A_PLUS_PLUS.md  TECHNICAL_INNOVATION_ROADMAP.md  performance_results.json  test_functional.rs  validate_performance.sh
.shamash/: custom-rules.json
benches/: ebpf_throughput.rs  real_throughput.rs  throughput.rs
data/: mcp_omni.db-shm  mcp_omni.db-wal
examples/: benchmark_real.rs  ebpf_demo.rs  integrated_echo_server.rs  live_adaptation_demo.rs  realistic_performance_demo.rs  simple_adaptive_test.rs  throughput_test.rs
src/: extensions.rs  lib.rs  regression_detector.rs
src/config/: mod.rs
src/protocol/: frames.rs  handshake.rs  mod.rs  parameters.rs
src/transport/: adaptive.rs  certificates.rs  falcon.rs  metrics.rs  mod.rs  streams.rs
src/transport/ebpf/: af_xdp.rs  loader.rs  metrics.rs  mod.rs  xdp.rs
tests/: adaptive_test.rs  ebpf_integration.rs  integration_test.rs  performance_real.rs  phase5_integration_tests.rs  phase5_performance_benchmarks.rs  phase5_security_tests.rs  phase5_unit_tests.rs  phoenix_quality_gates.rs  protocol_integration_test.rs  real_performance_validation.rs  security_test.rs
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
