[package]
name = "stoq"
version = "0.1.0"
edition = "2021"
authors = ["HyperMesh Team"]
description = "STOQ Protocol - Pure QUIC over IPv6 Transport (Transport Layer Only)"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# QUIC implementation
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.13"

# Networking
socket2 = "0.5"
bytes = { version = "1.6", features = ["serde"] }

# Data structures for high-performance optimization
dashmap = "6.0"
arc-swap = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
lock_api = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Hashing and crypto
sha2 = "0.10"
blake3 = "1.5"
ring = "0.17"
x509-parser = "0.16"
hex = "0.4"
base64 = "0.22"
# webpki-roots  # REMOVED: Use TrustChain CA only (100% standalone) = "0.26"
rsa = "0.9"
rand = "0.8"

# Post-quantum cryptography
pqcrypto = "0.17"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# Metrics and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# WebAssembly dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# eBPF support for kernel-level optimizations
# Note: eBPF requires additional system configuration and compilation steps
# See EBPF_IMPLEMENTATION.md for details

# Optional ML for routing optimization (placeholder)
# candle = { version = "0.5", optional = true }

[build-dependencies]
# No build dependencies needed for now

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
tempfile = "3.10"
futures = "0.3"
# wireshark = "0.1"  # For packet analysis in tests - optional

[features]
default = ["high-performance"]
high-performance = [] # Zero-copy operations, connection multiplexing
ebpf = [] # eBPF transport acceleration (requires system setup)
benchmark = []
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]

[[bench]]
name = "throughput"
harness = false

